<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mode_pause">Paused</string>
    <string name="mode_ready">Click to start!</string>
    <string name="mode_lose">You lost with %1$d points!</string>
    
    <string name="enter_name">Enter name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="music_on">Music On</string>
    <string name="music_off">Music Off</string>
    <string name="app_name">Super Snake Online</string>
    <string name="action_settings">Settings</string>
    <string name="single_player_button">Single Player</string>
    <string name="two_player_button">Two Player</string>
    <string name="high_scores_button">High Scores</string>
    <string name="settings_button">Settings</string>
    <string name="title_activity_snake_game">SnakeGameActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="snake_color">Snake Color</string>
    <string name="difficulty">Difficulty</string>
    <string name="back_button">Back</string>
    <string name="easy_radio_button">Easy</string>
    <string name="medium_radio_button">Medium</string>
    <string name="hard_radio_button">Hard</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="game_sound">Sound</string>
    <string name="title_activity_online_lobby">OnlineLobbyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="name_prompt">Player Name</string>
    <string name="settings_title">Settings</string>
    <string name="high_scores_title">High Scores</string>
    <string name="online_lobby_title">Online Lobby</string>
    <string name="select_color">Select Color</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="game_title">Super Snake Multiplayer</string>
    <string name="game_blurb">Sign into google plus to play</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="title_activity_multiplayer">MultiplayerActivity</string>
    <string name="zero">0</string>
    <string name="loser">Sorry, you lost.</string>
    <string name="winner">Congratulations, you won!</string>
    <string name="draw">Tie game</string>

</resources>
