<?xml version="1.0" encoding="utf-8"?>
<!--  Modified by Joe Lee and Chris Hoorn. Nov-2013. -->

<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in" style="@style/LLScreen" android:background="@color/greenstuff">
        <TextView style="@style/GameTitle" />
        <TextView style="@style/GameBlurb" />
        <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
            style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen" android:background="@color/greenstuff">
        <TextView style="@style/GameTitle"
            android:textSize="50sp" />
        <Button android:id="@+id/button_quick_game"
            style="@style/MainScreenButton"
            android:layout_width="400dp"
	        android:layout_margin="5dp"
	        android:textSize="35sp"
            android:text="@string/quick_game" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:textSize="35sp"
            android:text="@string/quick_game_explanation" />
        <Button android:id="@+id/button_invite_players"
            style="@style/MainScreenButton"
            android:layout_width="400dp"
	        android:layout_margin="5dp"
	        android:textSize="35sp"
            android:text="@string/invite_players" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:textSize="35sp"
            android:text="@string/invite_players_explanation" />
        <Button android:id="@+id/button_see_invitations"
            style="@style/MainScreenButton"
            android:layout_width="400dp"
	        android:layout_margin="5dp"
	        android:textSize="35sp"
            android:text="@string/see_invitations" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:textSize="35sp"
            android:text="@string/see_invitations_explanation" />
        <Button android:id="@+id/button_sign_out"
            style="@style/SignOutButton"
            android:layout_width="400dp"
	        android:layout_margin="5dp"
	        android:textSize="35sp"
            android:text="@string/sign_out" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup" android:background="@color/greenstuff">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen" android:background="@color/greenstuff">
        <TextView style="@style/Blurb" android:text="@string/please_wait" android:textSize="40sp" />
    </LinearLayout>
    
    <!--  SNAKE SCREEN -->
    <RelativeLayout android:id="@+id/screen_snake"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/greenstuff"
	    tools:context=".SnakeGameActivity" >
	
	    <edu.rosehulman.supersnakeonline.SnakeGameView
	        xmlns:app="http://schemas.android.com/apk/res/edu.rosehulman.supersnakeonline"
	        android:id="@+id/snake"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_margin="20dp"
		    app:tileSize="24dp"/>
	    
	    <TextView android:id="@+id/countdown" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"/>
	    
	    <TextView android:id="@+id/status_text"
		  	android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:textColor="@color/text_violet"
		    android:textSize="24sp"
		    android:visibility="visible" />
	    
	    <TextView 
	        android:id="@+id/score_text"
	        android:layout_alignParentTop="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:textSize="20sp"
	        android:text="@string/zero"/>
	    
	    <TextView 
	        android:id="@+id/opponent_score_text"
	        android:layout_alignParentTop="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:textSize="20sp"
	        android:text="@string/zero"/>

	</RelativeLayout>
	
    <!--  END SCREEN -->
    <RelativeLayout android:id="@+id/screen_end"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/greenstuff"
	    tools:context=".SnakeGameActivity" >
	    
	    <TextView 
	        android:id="@+id/high_score_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_above="@+id/low_score_text"
	        android:layout_margin="20dp"
	        android:textSize="40sp"
	        android:text="@string/zero"/>
	    
	    <TextView 
	        android:id="@+id/low_score_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_above="@+id/end_message"
	        android:layout_margin="20dp"
	        android:textSize="40sp"
	        android:text="@string/zero"/>
	    
	    <TextView 
	        android:id="@+id/end_message"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:layout_margin="20dp"
	        android:textSize="46sp"
	        android:text="@string/zero"/>
	    
	    <TextView
	        android:id="@+id/chat_box"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/white"
	        android:textSize="20sp"
	        android:text=""
	        android:layout_below="@+id/end_message"/>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/chat_box"
	        android:orientation="horizontal">
	        
		    <EditText
		        android:id="@+id/chat_entry"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:hint="Type to chat"
		        android:layout_weight="4"/>
		    <Button
		        android:id="@+id/chat_submit"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:text="Submit"/>
		</LinearLayout>

	</RelativeLayout>
	
    
</FrameLayout>